[package]
name = "mnml-db-docdb"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Amazon DocumentDB / MongoDB viewer for mnml — terminal TUI with multiple saved connections."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-db-docdb"
readme = "README.md"

[[bin]]
name = "mnml-db-docdb"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
# Official mongodb driver — DocumentDB is MongoDB-wire-compatible
# (3.6 / 4.0 / 5.0 surfaces).
mongodb = "3"
bson = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
